# eutrader

./: .env.example  .gitignore  Cargo.toml  config.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  tui.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  dashboard.rs  error.rs  lib.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/src/: executor.rs  lib.rs  manager.rs  paper.rs
crates/feed/: Cargo.toml
crates/feed/src/: book.rs  gamma.rs  lib.rs  manager.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs  quoter.rs  risk.rs
