[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/feed",
    "crates/strategy",
    "crates/engine",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Polymarket SDK
polymarket-client-sdk = { version = "0.4", features = ["clob", "ws", "gamma", "data", "tracing"] }
alloy = { version = "0.12", features = ["signers", "signer-local"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Numeric
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Internal crates
eutrader-core = { path = "crates/core" }
eutrader-feed = { path = "crates/feed" }
eutrader-strategy = { path = "crates/strategy" }
eutrader-engine = { path = "crates/engine" }
