[package]
name = "eutrader-strategy"
version.workspace = true
edition.workspace = true

[dependencies]
eutrader-core = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
